# slogger

./: .gitmodules  Dockerfile  README.md  config.yaml  pyproject.toml
src/slogger/: cli.py  codon_table_xlsx.py  config.yaml  io_fasta.py  mutate.py  pipeline.py
src/slogger.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/slogger/fragments/: __init__.py  api.py  frogger_backend.py
src/slogger/frogger_compat/: __init__.py
src/slogger/frogger_compat/v0_1/: __init__.py  checks.py  gg_adapters.py  splitters.py
tests/: conftest.py
tests/contract/: test_frogger_compat_v0_1.py
